--- a/prepros.cfg
+++ b/prepros.cfg
@@ -871,6 +871,84 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "8ebddeb1": {
+          "id": "8ebddeb1",
+          "path": "less/fontawesome/images/Circle-1.png",
+          "output": "less/fontawesome/images/Circle-1.png",
+          "name": "Circle-1.png",
+          "category": "IMAGE",
+          "size": 1493,
+          "type": "png",
+          "initialSize": 1493,
+          "optimized": false,
+          "height": 66,
+          "width": 66
+        },
+        "30eabe28": {
+          "id": "30eabe28",
+          "path": "js/jquery-ui.min.js",
+          "output": "js/jquery-ui.min-dist.js",
+          "name": "jquery-ui.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a2590370": {
+          "id": "a2590370",
+          "path": "css/jquery-ui.css",
+          "output": "css/jquery-ui-dist.css",
+          "name": "jquery-ui.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "ee51c101": {
+          "id": "ee51c101",
+          "path": "js/tag-it.js",
+          "output": "js/tag-it-dist.js",
+          "name": "tag-it.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "2ee4a68f": {
+          "id": "2ee4a68f",
+          "path": "less/blocks/tags.less",
+          "output": "css/blocks/tags.css",
+          "name": "tags.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "strictMath": false,
+          "strictUnits": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "bb53beb9"
+          ],
+          "type": "less"
         }
       },
       "deploymentHistory": {},
